concord_macros/tests/trybuild/fail/codegen/buffered_endpoint_execute_stream.stderr
error[E0277]: the trait bound `String: concord_core::request::StreamResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/buffered_endpoint_execute_stream.rs:16:24
   |
16 |     let _ = api.user().execute_stream().await.unwrap();
   |                        ^^^^^^^^^^^^^^ the trait `concord_core::request::StreamResponseKind` is not implemented for `String`
   |
help: the trait `concord_core::request::StreamResponseKind` is implemented for `StreamResponse<M>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<M> StreamResponseKind for StreamResponse<M> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_stream`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_stream<R>(self) -> Result<R, ApiClientError>
   |                  -------------- required by a bound in this associated function
...
   |         R: StreamResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_stream`

error[E0277]: the trait bound `String: concord_core::request::StreamResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/buffered_endpoint_execute_stream.rs:16:13
   |
16 |     let _ = api.user().execute_stream().await.unwrap();
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `concord_core::request::StreamResponseKind` is not implemented for `String`
   |
help: the trait `concord_core::request::StreamResponseKind` is implemented for `StreamResponse<M>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<M> StreamResponseKind for StreamResponse<M> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_stream`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_stream<R>(self) -> Result<R, ApiClientError>
   |                  -------------- required by a bound in this associated function
...
   |         R: StreamResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_stream`

error[E0277]: the trait bound `String: concord_core::request::StreamResponseKind` is not satisfied
  --> tests/trybuild/fail/codegen/buffered_endpoint_execute_stream.rs:16:41
   |
16 |     let _ = api.user().execute_stream().await.unwrap();
   |                                         ^^^^^ the trait `concord_core::request::StreamResponseKind` is not implemented for `String`
   |
help: the trait `concord_core::request::StreamResponseKind` is implemented for `StreamResponse<M>`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   | impl<M> StreamResponseKind for StreamResponse<M> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::execute_stream`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn execute_stream<R>(self) -> Result<R, ApiClientError>
   |                  -------------- required by a bound in this associated function
...
   |         R: StreamResponseKind + 'a,
   |            ^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::execute_stream`
